--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 header {
     background-color: #1f2937;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    font-size: 18px;
+    color: #f9faf8;
+    padding: 10px;
+}
+ul {
+    display: flex;
+    list-style: none;
+    gap: 1em;
 }
