--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,20 @@ ul {
     list-style: none;
     gap: 1em;
 }
+.first.main {
+    display: flex;
+    background-color: #1f2937;
+    justify-content: center;
+    padding: 50px;
+    gap: 3rem;
+}
+.first-left, .first-right {
+    width: 30%;
+}
+.first-right {
+    height: 100px;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
