--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,9 @@ h2 {
     padding: 50px;
     border-radius: 10px;
 }
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #1f2937;
+}
